--- a/include/header.html
+++ b/include/header.html
@@ -18,7 +18,7 @@
     <p>2025-02-13(Fri)</p>
     <p><strong>AM 11:25</strong></p>
     <button type="button" class="btn alert-btn">
-      <i><img src="../images/customization/i-notifications.svg" alt="알람버튼"></i>
+      <i><img src="images/customization/i-notifications.svg" alt="알람버튼"></i>
     </button>
   </div>
   <div class="alert-container">
