--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -3,7 +3,7 @@
 <div class="navbar-wrapper">
   <div class="m-header mb-4 d-flex justify-content-between">
     <a href="javascript:void(0);">
-      <img src="/images/logo-dark.svg" class="img-fluid logo-lg" alt="logo" />
+      <img src="images/logo-dark.svg" class="img-fluid logo-lg" alt="logo" />
     </a>
     <button type="button" class="btn menu-all d-flex justify-content-center align-items-center">
       <span>menu</span>
