--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -27,7 +27,7 @@
   <div class="navbar-btn-content mb-4">
     <ul class="pc-quick-btn-list d-flex flex-wrap justify-content-center align-items-center">
       <li class="rounded-2">
-        <button type="button" class="btn d-flex flex-column justify-content-center align-items-center" onclick="location.href='../index.html'">
+        <button type="button" class="btn d-flex flex-column justify-content-center align-items-center" onclick="location.href='index.html'">
           <i class="i-btn ic-quick-1"></i>
           <span data-i18n="mainDashboard">메인 대시보드</span>
         </button>
@@ -59,7 +59,7 @@
   <div class="navbar-content mb-3">
     <ul class="pc-navbar">
       <li class="pc-item mb-1">
-        <a href="javascript:void(0);" class="pc-link pc-main-link">
+        <a href="index.html" class="pc-link pc-main-link">
           <span class="pc-mtext" data-i18n="mainDashboard">메인 대시보드</span>
         </a>
       </li>
@@ -93,7 +93,7 @@
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="../sub-01.html" data-i18n="employeeList">직원 목록</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-01.html" data-i18n="employeeList">직원 목록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="departmentManagement">부서관리</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="permissionManagement">권한관리</a></li>
         </ul>
