--- a/include/sub-header.html
+++ b/include/sub-header.html
@@ -1,3 +1,10 @@
+<!-- background-bg -->
+<div class="video-bg position-absolute top-0 start-0 w-100 z-n1">
+  <video autoplay loop>
+    <source src="../images/customization/bg-video-01.mp4" type="video/mp4">
+    브라우저가 비디오 태그를 지원하지 않습니다.
+  </video>
+</div>
 <div class="d-flex justify-content-between align-items-center">
   <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -11,8 +18,10 @@
    
 <div class="notification position-relative d-flex align-items-center gap-2">
   <div class="util d-flex align-items-center gap-2 position-relative">
-    <button data-lng="ko" type="button" class="btn lang-switch">KR</button>
-    <button data-lng="en" type="button" class="btn lang-switch">EN</button>
+    <!-- <button data-lng="ko" type="button" class="btn lang-switch">KR</button> -->
+    <!-- <button data-lng="en" type="button" class="btn lang-switch">EN</button> -->
+    <button type="button" class="btn lang-switch" onclick="location.href='subkr-01.html'">KR</button>
+    <button type="button" class="btn lang-switch" onclick="location.href='sub-01.html'">EN</button>
   </div>
   <div class="date-time d-flex align-items-center gap-2">
     <p>2025-02-13(Fri)</p>
