--- a/include/header.html
+++ b/include/header.html
@@ -1,7 +1,7 @@
 <!-- background-bg -->
 <div class="video-bg position-absolute top-0 start-0 w-100 z-n1">
   <video autoplay loop>
-    <source src="../images/customization/bg-video-01.mp4" type="video/mp4">
+    <source src="images/customization/bg-video-01.mp4" type="video/mp4">
     브라우저가 비디오 태그를 지원하지 않습니다.
   </video>
 </div>
