--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -5,7 +5,7 @@
     <a href="javascript:void(0);">
       <img src="images/logo-dark.svg" class="img-fluid logo-lg" alt="logo" />
     </a>
-    <button type="button" class="btn menu-all d-flex justify-content-center align-items-center">
+    <button type="button" class="btn sidebar-menu menu-all d-flex justify-content-center align-items-center">
       <span>menu</span>
     </button>
   </div>
