--- a/include/header.html
+++ b/include/header.html
@@ -31,6 +31,7 @@
   <div class="alert-container">
     <ul class="list-group gap-2">
       <li class="list-group-item alert-box">
+        <button class="ico close-btn"><i class="ri-close-line"></i></button>
         <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림1</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
@@ -39,6 +40,7 @@
       </li>
       <!-- [loop] -->
       <li class="list-group-item alert-box">
+        <button class="ico close-btn"><i class="ri-close-line"></i></button>
         <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림2</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
@@ -46,6 +48,7 @@
         </div>
       </li>
       <li class="list-group-item alert-box">
+        <button class="ico close-btn"><i class="ri-close-line"></i></button>
         <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림3</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
@@ -53,6 +56,7 @@
         </div>
       </li>
       <li class="list-group-item alert-box">
+        <button class="ico close-btn"><i class="ri-close-line"></i></button>
         <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림4</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
