--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -82,7 +82,7 @@
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="attendanceRecords">출퇴근 기록</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-01.html" data-i18n="attendanceRecords">출퇴근 기록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="biometricInform">생체정보 등록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="attendanceStatistics">출퇴근 통계</a></li>
         </ul>
@@ -93,7 +93,7 @@
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="sub-01.html" data-i18n="employeeList">직원 목록</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-02.html" data-i18n="employeeList">직원 목록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="departmentManagement">부서관리</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="permissionManagement">권한관리</a></li>
         </ul>
