--- a/include/sidebar-kr.html
+++ b/include/sidebar-kr.html
@@ -82,7 +82,7 @@
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);">출퇴근 기록</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-01.html">출퇴근 기록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);">생체정보 등록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);">출퇴근 통계</a></li>
         </ul>
@@ -93,7 +93,7 @@
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="sub-01.html">직원 목록</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-02.html">직원 목록</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);">부서관리</a></li>
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);">권한관리</a></li>
         </ul>
