--- a/css/style-custom.css
+++ b/css/style-custom.css
@@ -103,6 +103,10 @@ body { font-family: var(--bs-font-sans-serif) !important; line-height: 1 !import
 .pc-sidebar .pc-hasmenu .pc-submenu { background: var(--pc-sidebar-trigger-color); border-radius: 4px; margin: 10px 0; overflow: hidden; } 
 .pc-sidebar .pc-navbar > .pc-item .pc-submenu .pc-item:hover > .pc-link { text-decoration: underline; } 
 
+/* slider */
+.slide-container .slide{width: 100%;height: 100%;position: absolute;top:0;left:0;opacity: 0;transition: opacity 1s ease-in-out;}
+.slide-container .slide.active{opacity: 1;}
+
 /* logo */
 .pc-sidebar .m-header { height: auto; padding: 0; } 
 .pc-sidebar .menu-all { background: var(--pc-sidebar-trigger-color); padding: 7.5px; } 
@@ -162,7 +166,7 @@ body { font-family: var(--bs-font-sans-serif) !important; line-height: 1 !import
 .admin-container .info-caption { background: var(--pc-sidebar-trigger-color); padding: 10px; font-size: 10px; border-radius: 4px; } 
 
 /* main-visual */
-.main-visual { height: 262px; background: linear-gradient(270deg, rgba(15, 17, 49, 0.6) 0%, rgba(47, 93, 162, 0.7) 100%); border-radius: 4px; border: 0;margin-bottom:20pxs;} 
+.main-visual { height: 262px; /*background: linear-gradient(270deg, rgba(15, 17, 49, 0.6) 0%, rgba(47, 93, 162, 0.7) 100%);*/background: inherit; border-radius: 4px; border: 0;} 
 .main-visual .breadcrumb-item,
 .main-visual .breadcrumb-item i { color: #9ca1b4; } 
 .main-visual .breadcrumb-item.active { color: var(--bs-white); } 
