--- a/include/header.html
+++ b/include/header.html
@@ -5,6 +5,13 @@
     브라우저가 비디오 태그를 지원하지 않습니다.
   </video>
 </div>
+<!-- <div class="video-bg position-absolute top-0 start-0 w-100 z-n1">
+    <div class="slide-container">
+      <div class="slide active"><img src="../images/customization/top-banner-01.webp" alt="상단비주얼1"></div>
+      <div class="slide"><img src="../images/customization/top-banner-02.webp" alt="상단비주얼2"></div>
+      <div class="slide"><img src="../images/customization/top-banner-03.webp" alt="상단비주얼3"></div>
+    </div>
+</div> -->
 <div class="d-flex justify-content-between align-items-center flex-wrap">
   <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -94,3 +101,4 @@
     <button class="nav-link" id="tab-menu-4" data-bs-toggle="tab" data-bs-target="#tab-menu-pane-4" type="button" role="tab" aria-controls="tab4" aria-selected="false">직원 삭제</button>
   </li> -->
 </ul>
+
