--- a/css/style-custom.css
+++ b/css/style-custom.css
@@ -104,8 +104,22 @@ body { font-family: var(--bs-font-sans-serif) !important; line-height: 1 !import
 .pc-sidebar .pc-navbar > .pc-item .pc-submenu .pc-item:hover > .pc-link { text-decoration: underline; } 
 
 /* slider */
-.slide-container .slide{width: 100%;height: 100%;position: absolute;top:0;left:0;opacity: 0;transition: opacity 1s ease-in-out;}
-.slide-container .slide.active{opacity: 1;}
+.visual-slider{border-radius: 4px;overflow: hidden;height: 100%;}
+.swiper{height: 100%;}
+.swiper .swiper-slide img{width: 100%;height: 100%;background-position: center;transition: transform 2s ease-in-out;}
+.swiper .swiper-slide-active img{animation: scaleAnimation 8s alternate ease-in-out;}
+
+@keyframes scaleAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 
 /* logo */
 .pc-sidebar .m-header { height: auto; padding: 0; } 
@@ -333,7 +347,10 @@ body { font-family: var(--bs-font-sans-serif) !important; line-height: 1 !import
 .sub-02 .input-info-box ul li:nth-last-child(-n+2){padding-bottom: 0;}
 .sub-02 .input-info-box ul li p{margin-bottom: 0;width: 30%;}
 .sub-02 .input-info-box ul li input{width: 65%;background: none;border: 1px solid #3A3A3F;color: #fff;padding: 10px; font-size: 14px;border-radius: 4px;}
-.sub-02 .input-info-box .tag{background: rgba(69, 158, 255, 0.1);color: rgba(69, 158, 255, 1);padding: 5px;border-radius: 30px;font-size: 14px;min-width: 50px;text-align: center;}
+.sub-02 .input-info-box .tag{background: rgba(69, 158, 255, 0.1);color: rgba(69, 158, 255, 1);padding: 5px;border-radius: 30px;font-size: 14px;min-width: 60px;text-align: center;}
+.sub-02 .input-info-box .cbox .tag{display: none;}
+.sub-02 .input-info-box .cbox .tag.on{display: block;}
+
 
 /* 팝업 */
 .sub-02 .input-modal{display: none; position: fixed;top: 0;left: 0;z-index: 9999; width: 100vw;height: 100vh;background: rgba(43, 47, 50, .8); backdrop-filter: blur(3px);align-items: center;justify-content: center;}
