--- a/css/style-custom.css
+++ b/css/style-custom.css
@@ -106,20 +106,8 @@ body { font-family: var(--bs-font-sans-serif) !important; line-height: 1 !import
 /* slider */
 .visual-slider{border-radius: 4px;overflow: hidden;height: 100%;}
 .swiper{height: 100%;}
-.swiper .swiper-slide img{width: 100%;height: 100%;background-position: center;transition: transform 2s ease-in-out;}
-.swiper .swiper-slide-active img{animation: scaleAnimation 8s alternate ease-in-out;}
-
-@keyframes scaleAnimation {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
+.swiper .swiper-slide img{width: 100%;height: 100%;background-position: center;transition: transform 5s ease-in-out;transform:  scale(1);}
+.swiper .swiper-slide-active img{/*animation: scaleAnimation 10s ease-in-out;*/transform: scale(1.05);}
 
 /* logo */
 .pc-sidebar .m-header { height: auto; padding: 0; } 
